author box spacing and fix duplicate font-size

--- a/src/components/Blog/AuthorBox/authorbox.module.styl
+++ b/src/components/Blog/AuthorBox/authorbox.module.styl
@@ -1,7 +1,7 @@
 @import '~stylus/index.styl'
 
 .authorbox
-  margin 6.25rem 0
+  margin 3.75rem 0
 
 .card
   padding 1.875rem
