--- a/src/components/Layout/Base/highlight.styl
+++ b/src/components/Layout/Base/highlight.styl
@@ -38,7 +38,6 @@
       word-spacing normal
       word-break normal
       line-height 1.6rem
-      font-size 1rem
       font-weight 400
       -moz-tab-size 2
       -o-tab-size 2
